# wdmmg-python

./: LICENSE  README.md  pyproject.toml
src/wdmmg/: __init__.py  client.py
